re PR c++/46394 ([C++0X] [4.6 Regression] no matching function with default template parameter)

PR c++/46394

gcc/cp/

	PR c++/46394
	* pt.c (tsubst_pack_expansion): do not use
	cp_tree_equal/same_type_p to detect an expansion of a parameter
	pack.

gcc/testsuite/

	PR c++/46394
	* g++.dg/template/typedef38.C: New test.

From-SVN: r170341